--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="../Assests/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <a href="#" class="logo-container">
-            <img src="../Assests/faviconio-logo/logo.png" alt="Music logo" class="logo">
+            <img src="logo.png" alt="Music logo" class="logo">
         </a>
         <nav class="navigation">
             <ul class=list-container>
@@ -36,7 +36,7 @@
             </div>
             
             <div class="image-container">
-                <img src="../Assests/phone.png" alt="music" class="music-image">
+                <img src="phone.png" alt="music" class="music-image">
 
             </div>
 
