--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
                 <p class="bottom">Find out how streaming your favorite artists can help towards reducing plastic waste in oceans</p>
                 <button class="button2">LEARN MORE</button> 
             </div>
-            
-          </div>
+        </div>
+
+        <div class="spotify-container">
+            <img src="2023wrapped_summary-share.jpeg" alt="" class="spotify-wrapped">
+        </div>
+        
             <div class="footer">Susan 2023</div>
           </body>
         </html>
