--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="list-item"><a href="#home">Home</a></li>
                 <li class="list-item"><a href="#playlists">Playlists</a></li>
                 <li class="list-item"><a href="#contact">Contact</a></li>
+                <li class="list-item"><a href="#wrapped">Wrapped</a></li>
             </ul>
         </nav>
     </header>
@@ -89,10 +90,10 @@
             </div>
         </div>
 
-        <div class="spotify-container">
+        <div class="spotify-container" id="wrapped">
             <img src="2023wrapped_summary-share.jpeg" alt="" class="spotify-wrapped">
         </div>
-        
+
             <div class="footer">Susan 2023</div>
           </body>
         </html>
