--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <img src="logo.png" alt="Music logo" class="logo">
         </a>
         <nav class="navigation">
+            <img src="Hamburger menu.svg" alt="Hamburger menu" class="hamburger-menu">
             <ul class=list-container>
                 <li class="list-item"><a href="#home">Home</a></li>
                 <li class="list-item"><a href="#playlists">Playlists</a></li>
@@ -54,7 +55,7 @@
                     <p class="text">A mix of soul, bossa nova, and jazz</p>
                 </div>
 
-                <div class="iframe">
+                <div class="iframe iframe2">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYBO1MoTDhZI?utm_source=generator" 
                     width="100%" height="400" frameBorder="0" 
                     allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
@@ -62,7 +63,7 @@
                     <p class="text">Dive into the Feel-Good Vibes Playlist</p>
                 </div>
 
-                <div class="iframe">
+                <div class="iframe iframe3">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DXaohnPXGkLv6?utm_source=generator" 
                     width="100%" height="400" frameBorder="0" allowfullscreen="" 
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
